# wallet-service-rs

./: .env  Cargo.toml
migrations/: 20250329142806_create_wallet_tables.sql  20250331052607_create_user_table.sql
src/: database.rs  handler.rs  handlers.rs  main.rs  model.rs
