[package]
name = "wallet-service"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.10.2"
tokio = {version = "1.44.1" , features = ["full"]}
serde = {version = "1.0.219", features = ["default"]}
serde_json = "1.0.140"
sqlx = {version = "0.8.3", features = ["postgres","runtime-tokio","macros","uuid"]}
dotenvy = "0.15.7"
uuid = {version = "1.16.0", features = ["v4", "serde"]}
chrono = {version = "0.4.40", features = ["serde"]}
